modify entity, repository, services and controller, added methods for record.